tests/snapshots/type_error_suggestion.expected
-- NAME ERROR ----------------------------------------------

test.gn:1:14

I cannot find a variable named `io_prnt`.

Did you mean io_print?

1 | let result = io_prnt "hello"
                 ^^^^^^^
